@@ -346,7 +346,7 @@ static int handle_udp_packet(dtls_listener_relay_server_type *server,
 			}
 		}
 
-		if(ioa_socket_check_bandwidth(s,ioa_network_buffer_get_size(sm->m.sm.nd.nbh),1)) {
+		if(ioa_socket_check_bandwidth(s,sm->m.sm.nd.nbh,1)) {
 			if (s && s->read_cb && sm->m.sm.nd.nbh) {
 				s->e = ioa_eng;
 				s->read_cb(s, IOA_EV_READ, &(sm->m.sm.nd), s->read_ctx, 1);
